# enterprise-multi-agent-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.prod.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: analysis_agent.py  data_agent.py  report_agent.py  review_agent.py  supervisor.py  viz_agent.py
backend/app/api/v1/: chat.py  reports.py
backend/app/core/: config.py
backend/app/evaluation/: harness.py  metrics.py
backend/app/graph/: builder.py  state.py
backend/app/mcp/: client.py
backend/app/mcp/servers/: db_server.py  python_server.py
backend/app/prompts/: report_agent_prompt.py  review_agent_prompt.py
backend/app/rag/: embeddings.py  loader.py  retriever.py
backend/app/tools/: chart_tool.py  python_tool.py  sql_tool.py
backend/tests/: 03.py  06.py
data/templates/: annual_summary_template.md  monthly_operation_template.md  quarterly_sales_template.md
docs/: 01-项目架构设计与环境搭建.md  02-核心状态机State设计.md  03-DataAgent与MCP数据库工具.md  04-AnalysisAgent与Python计算工具.md  05-VizAgent与图表生成工具.md  06-ReportAgent与RAG报告生成.md  07-ReviewAgent与Harness评估体系.md  08-前端集成与部署上线.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  App1.tsx  index.css  main.tsx
frontend/src/components/: AgentStatus.tsx  ChatWindow.tsx  ReportViewer.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
